# WSES

./: LICENSE  Pipfile  README.md  requirements.txt  setup.cfg
src/wses/: main.py
