[metadata]
name = WSES
version = 0.0.1
author = SalahDin Rezk
author_email = salah2112004@gmail.com
description = Web Scraper for E-commerce Site.
url = https://github.com/salastro/wses
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    async-generator>=1.10
    attrs>=23.1.0
    beautifulsoup4>=4.12.2
    certifi>=2023.5.7
    charset-normalizer>=3.1.0
    exceptiongroup>=1.1.1
    h11>=0.14.0
    idna>=3.4
    outcome>=1.2.0
    packaging>=23.1
    pysocks>=1.7.1
    python-dotenv>=1.0.0
    requests>=2.31.0
    selenium>=4.9.1
    sniffio>=1.3.0
    sortedcontainers>=2.4.0
    soupsieve>=2.4.1
    tqdm>=4.65.0
    trio>=0.22.0
    trio-websocket>=0.10.2
    urllib3[socks]>=2.0.2
    webdriver-manager>=3.8.6
    wsproto>=1.2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wses = wses.__main__:main
